🛠️ Fix page transition flicker

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,7 @@
 
 html {
   @apply scroll-smooth;
+  @apply transition;
 } 
 
 .no-card {
